<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="350dp"
    tools:context=".admin.Reg">

    <EditText
        android:id="@+id/hsp_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hospital_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/hsp_lat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hospital_latitude"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/hsp_name"
        app:layout_constraintStart_toStartOf="@+id/hsp_name"
        app:layout_constraintTop_toBottomOf="@+id/hsp_name" />

    <EditText
        android:id="@+id/hsp_logi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hopital_longitude"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/hsp_lat"
        app:layout_constraintStart_toStartOf="@+id/hsp_lat"
        app:layout_constraintTop_toBottomOf="@+id/hsp_lat" />

    <TextView
        android:id="@+id/select_keph_level_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
       android:textStyle="bold"
        android:text="KEPH Level"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/hsp_logi"
        app:layout_constraintTop_toBottomOf="@+id/hsp_logi" />

    <Spinner
        android:id="@+id/keph_level_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_keph_level_heading" />


    <TextView
        android:id="@+id/select_service_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Select Services"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keph_level_spinner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/services_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_service_heading" />

    <Button
        android:id="@+id/btn_dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Dismiss"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/services_list_recycler"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save_hospital"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@id/btn_dismiss"
        app:layout_constraintTop_toBottomOf="@+id/services_list_recycler"
        />



</androidx.constraintlayout.widget.ConstraintLayout>